font embed test

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,4 +28,6 @@ html
         script loadData();
         script#project-data-deferred(type="text/json")
             include project-data-deferred.json
+        script#font(type="text/css")
+            include font.css
         script loadDataDeferred();
