--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ html
             include scripts/test.js
         script(id="main.js")
             include scripts/main.js
-    body(onload="start()")
+    body(onload="start()").no-select
         #frame
             #scene
         script#project-data(type="text/json")
