--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,8 @@ html
         // scripts
         script(id="utility.js")
             include scripts/utility.js
+        script(id="domino.js")
+            include scripts/domino.js
         script(id="test.js")
             include scripts/test.js
         script(id="main.js")
