more selection tests

--- a/src/index.pug
+++ b/src/index.pug
@@ -29,15 +29,14 @@ html
             #scene
         #toolbar.icon-bar(data-block-clicks)
             .icon#open-about(title="information & settings") 🔨
-            .icon#zoom(title="switch zoom level") 🔎
             .icon#center(title="jump to center") 🏠
-            .icon#add-delete-icon(hidden, draggable="true", title="drag a new card from here or a drop an unwanted card", .icondata-locked-visibility="hidden") 🗃️
             .icon#fullscreen(title="toggle fullscreen", hidden) 💢
             .icon#unlocked(title="prevent accidental editing", .icondata-locked-visibility="hidden") 🔓
-            .icon#locked(title="enable editing", data-locked-visibility="shown") 🔒
+            .icon#locked(title="enable editing", data-locked-visibility="shown" hidden) 🔒
 
-            .toolbar-group.icon-bar
+            .toolbar-group.icon-bar(data-path="selection" hidden)
                 .icon(data-action="selection/cancel" title="deselect") ❌
+                .icon(data-action="selection/center" title="center selected") 🔎
                 .icon(data-action="selection/edit" title="edit selected") 📝
                 .icon(data-action="selection/delete" title="delete selected") 💥
                 //.icon(data-action="selection/link" title="link selected") 🖇
