--- a/src/index.pug
+++ b/src/index.pug
@@ -39,14 +39,18 @@ html
                 .icon#locked(data-action="global/unlock" title="enable editing" hidden) 🔒
                 .icon#open-about(data-action="global/menu" title="information & settings") 🔨
                 .icon
-                .icon
 
             .toolbar-group.icon-bar(data-path="selection" hidden)
-                .icon(data-action="selection/cancel" title="deselect") ❌
+                //.icon(data-action="selection/cancel" title="deselect") ❌
                 .icon(data-action="selection/center" title="center selected") 🔎
                 .icon(data-action="selection/group" title="group selected") 🔯
                 .icon(data-action="selection/delete" title="delete selected") 💥
-                //.icon(data-action="selection/link" title="link selected") 🖇
+            
+            .toolbar-group.icon-bar(data-path="group" hidden)
+                //.icon(data-action="group/cancel" title="deselect") ❌
+                .icon(data-action="group/cycle" title="cycle groups") 🔄
+                .icon(data-action="group/type" title="cycle group type") 🔯
+                .icon(data-action="group/delete" title="delete group") 💥
         script#project-data(type="text/json")
             include project-data.json
         script loadData();
