group cycle on click

--- a/src/index.pug
+++ b/src/index.pug
@@ -48,7 +48,7 @@ html
             
             .toolbar-group.icon-bar(data-path="group" hidden)
                 //.icon(data-action="group/cancel" title="deselect") ❌
-                .icon(data-action="group/cycle" title="cycle groups") 🔄
+                .icon
                 .icon(data-action="group/type" title="cycle group type") 🔯
                 .icon(data-action="group/delete" title="delete group") 💥
         script#project-data(type="text/json")
