--- a/src/index.pug
+++ b/src/index.pug
@@ -49,7 +49,7 @@ html
             .toolbar-group.icon-bar(data-path="group" hidden)
                 //.icon(data-action="group/cancel" title="deselect") ❌
                 .icon
-                .icon(data-action="group/type" title="cycle group type") 🔯
+                .icon
                 .icon(data-action="group/delete" title="delete group") 💥
         script#project-data(type="text/json")
             include project-data.json
