--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,7 @@ html
         style#core-style
             include styles/core-style.css
         style#editor-style(data-editor-only)
-            //include styles/editor-style.css
+            include styles/editor-style.css
         // third party libraries
         // scripts
         script(id="utility.js")
