card restructure toward resize handle

--- a/src/index.pug
+++ b/src/index.pug
@@ -43,7 +43,7 @@ html
             .toolbar-group.icon-bar(data-path="selection" hidden)
                 //.icon(data-action="selection/cancel" title="deselect") ❌
                 .icon(data-action="selection/center" title="center selected") 🔎
-                .icon(data-action="selection/group" title="group selected") 🔯
+                .icon(data-action="selection/group" title="group selected") 📁
                 .icon(data-action="selection/delete" title="delete selected") 💥
             
             .toolbar-group.icon-bar(data-path="group" hidden)
