--- a/src/styles/core-style.css
+++ b/src/styles/core-style.css
@@ -32,10 +32,14 @@ body {
     /* will-change: transform; */
 }
 
-.card {
+.card-root {
     position: absolute;
     width: 240px; height: 144px;
+}
 
+.card-body {
+    width: 100%; height: 100%;
+    position: relative; overflow: hidden; /* clipping */
     background-color: white;
     color: black;
 
@@ -87,7 +91,7 @@ body {
     margin: 0;
 
     left: 50%; bottom: 0;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, calc(50% - 3px));
 
     font-size: 1rem;
     column-gap: .75em;
@@ -173,7 +177,7 @@ body {
     background: var(--group-color);
 }
 
-svg {
+svg.group {
     position: absolute;
     mix-blend-mode: screen;
     opacity: 1;
