--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -1,3 +1,8 @@
+:root {
+    font-family: "Lora", sans-serif;
+    font-size: 1.1em;
+}
+
 .selection-flash {
     animation-name: selection-flash;
     animation-direction: alternate;
@@ -37,3 +42,106 @@
     position: absolute;
     left: -16px; right: -16px; top: -16px; bottom: -16px;
 }
+
+.icon.disabled {
+    cursor: not-allowed;
+    opacity: .5;
+}
+
+#editor-blocker {
+    background-color: rgba(0, 0, 0, 25%);
+}
+
+#editor-panel {
+    position: absolute;
+    left: 50%; bottom: 0;
+    transform: translate(-50%, 0);
+
+    background: rgb(240, 248, 255);
+    pointer-events: initial;
+    cursor: initial;
+
+    width: 400px;
+    max-width: 100%;
+    height: 300px;
+    max-height: 50%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#content-input {
+    flex: 1;
+}
+
+.full {
+    position: absolute;
+    width: 100%; height: 100%;
+    margin: 0; padding: 0;
+}
+
+/* generic tabbed pages styles */
+.tab-bar {
+    display: grid;
+    grid-auto-flow: column;
+    color: white;
+    background:black;
+}
+
+.tab-bar > * {
+    padding: 1em;
+    text-align: center;
+}
+
+.tab-bar > *.active {
+    color: black;
+    background: rgb(240, 248, 255);
+}
+
+.tab-page {
+    margin: 0;
+    padding: 2em;
+    overflow: auto;
+
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+/* end of tabbed pages styles */
+
+.editor-page {
+    padding: 1em;
+    height: 100%;
+    display: flex;
+
+    flex-direction: column;
+}
+
+/* editor icons page styles */
+.editor-page[data-page="icons"] {
+    display: grid;
+
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+
+    column-gap: 1em;
+    row-gap: 1em;
+}
+
+.icon-select {
+    min-width: 3em;
+    text-align: center;
+    font-size: 1em;
+
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.icon-command {
+    font-size: 1em;
+    font-family: monospace;
+
+    grid-column-start: 2;
+    grid-column-end: 5;
+}
+/* end of editor icons page styles */
