--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -115,6 +115,7 @@
     display: flex;
 
     flex-direction: column;
+    gap: 1em;
 }
 
 /* editor icons page styles */
@@ -145,3 +146,7 @@
     grid-column-end: 5;
 }
 /* end of editor icons page styles */
+
+textarea {
+    flex: 1;
+}
