--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -48,11 +48,15 @@
     opacity: .5;
 }
 
-#editor-blocker {
+.editor-blocker {
+    position: absolute;
+    width: 100%; height: 100%;
+    margin: 0; padding: 0;
+
     background-color: rgba(0, 0, 0, 25%);
 }
 
-#editor-panel {
+.editor-panel {
     position: absolute;
     left: 50%; bottom: 0;
     transform: translate(-50%, 0);
@@ -119,7 +123,7 @@
 }
 
 /* editor icons page styles */
-.editor-page[data-tab-body="editor/icons"] {
+.editor-page[data-tab-body="card-editor/icons"] {
     display: grid;
 
     grid-template-columns: repeat(4, 1fr);
@@ -138,7 +142,7 @@
     grid-column-end: 2;
 }
 
-.icon-command {
+.icon-action {
     font-size: 1em;
     font-family: monospace;
 
