save load tests

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,6 +14,8 @@ html
             include styles/editor-style.css
         // third party libraries
         // scripts
+        script(id="database.js")
+            include scripts/database.js
         script(id="utility.js")
             include scripts/utility.js
         script(id="htmlui.js")
