fix group card selection

--- a/src/index.pug
+++ b/src/index.pug
@@ -44,7 +44,7 @@ html
                 .icon(data-action="global/home" title="jump to center") 🏠
 
             .toolbar-group.icon-bar(data-path="global")
-                .icon#open-about(data-action="global/menu" title="information & settings") 🔨
+                //.icon#open-about(data-action="global/menu" title="information & settings") 🔨
                 .icon(data-action="project/save" title="save in browser") 💾
                 .icon(data-action="project/export/html" title="export html") 📦
 
