clean up groups/links after deleting cards. clear board when loading project

--- a/src/index.pug
+++ b/src/index.pug
@@ -47,6 +47,7 @@ html
                 //.icon#open-about(data-action="global/menu" title="information & settings") 🔨
                 .icon(data-action="project/save" title="save in browser") 💾
                 .icon(data-action="project/export/html" title="export html") 📦
+                .icon(data-action="project/reset" title="reset to default") ❌
 
             .toolbar-group.icon-bar(data-path="selection" hidden)
                 //.icon(data-action="selection/cancel" title="deselect") ❌
